syntax = "proto3";

option go_package = "/auth";

package auth;

service AuthService {
  rpc CreateUser(UserDetails) returns (AuthResponse) {}
  rpc VerifyUser(Token) returns (VerifyResponse) {}
  rpc LoginUser(UserDetails) returns (LoginResponse) {}
}

message Token {
  string token = 1;
}

message VerifyResponse {
  string message = 1;
}

message UserDetails {
  string email = 1;
  string user_name = 2;
  string password = 3;
}

message AuthResponse {
  string message = 1;
}

message LoginResponse {
  int64 id = 1;
  string user_name = 2;
  string role = 3;
}
